--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,6 +5,11 @@
     <meta charset="utf-8">
     <title></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Rokkitt:wght@500&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
@@ -23,9 +28,13 @@
       </div>
     </nav>
 
-    <p>This project was developed by MP as a capstone project for CSI 492</p>
-    <p>The main goal was to develop a weather forecast project that would not be overloaded with ads. It is also interestingto note that depending on sourse of data, it might be a little different. Therefore, my project gives you a choice between two
-      of the most used APIs. If you like this idea and would like support this project, please consider a small donation. This will help me to cover hosting costs as well as have better access to APIs.</p>
+
+    <p class="about-us-p">This project was developed by MP as a capstone project for CSI 492.<br>
+      The main goal was to develop a weather forecast project that would not be overloaded with ads.
+      It is also interestingto note that depending on sourse of data, it might be a little different.
+      Therefore, my project gives you a choice between two
+      of the most used APIs. If you like this idea and would like support this project, please consider a small donation.
+      This will help me to cover hosting costs as well as have better access to APIs.</p>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
