--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -5,6 +5,11 @@
     <meta charset="utf-8">
     <title></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Rokkitt:wght@500&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
@@ -23,25 +28,12 @@
       </div>
     </nav>
 
-    <h1>Enter Zip Code or City Name</h1>
+    <h2 class="main-header">Enter Zip Code or City Name</h2>
     <form action="cityInput" method="post">
-      <div class="input-group mb-3">
+      <div id="input-field" class="input-group mb-3">
         <input name="cityInput" type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
         <button type="submit" class="btn btn-primary">Search</button>
       </div>
-    </form>
-
-
-    <hr>
-    <p>If you would like to support this project, please use this button to make a donation.</p>
-    <!-- Paypal Donate button -->
-    <form action="https://www.paypal.com/donate" method="post" target="_top">
-      <input type="hidden" name="business" value="ZEDMVZC3862AN" />
-      <input type="hidden" name="no_recurring" value="0" />
-      <input type="hidden" name="item_name" value="Thank you for supporting Weather Website without Ads Project!" />
-      <input type="hidden" name="currency_code" value="USD" />
-      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-      <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
     </form>
 
 
