--- a/views/support.ejs
+++ b/views/support.ejs
@@ -5,6 +5,11 @@
     <meta charset="utf-8">
     <title></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Rokkitt:wght@500&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
@@ -23,9 +28,9 @@
       </div>
     </nav>
 
-    <p>If you would like to support this project, please use this button to make a donation.</p>
+    <p class="support-p">If you would like to support this project, please use this button to make a donation.</p>
     <!-- Paypal Donate button -->
-    <form action="https://www.paypal.com/donate" method="post" target="_top">
+    <form class="support-b" action="https://www.paypal.com/donate" method="post" target="_top">
       <input type="hidden" name="business" value="ZEDMVZC3862AN" />
       <input type="hidden" name="no_recurring" value="0" />
       <input type="hidden" name="item_name" value="Thank you for supporting Weather Website without Ads Project!" />
