--- a/views/weather.ejs
+++ b/views/weather.ejs
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <title><%= cityName %> Weather</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Rokkitt:wght@500&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -23,10 +27,12 @@
       </div>
     </nav>
 
-    <h1><%= cityName %></h1>
-    <h2><%= currentTemp %>°</h2>
-    <h3><%= weatherDescription %></h3>
-    <h6>Min Temperature Today: <%= minCurrentTemp %>°, Max Temperature Today: <%= maxCurrentTemp %>°</h6>
+    <div class="today-weather">
+      <h1><%= cityName %></h1>
+      <h2><%= currentTemp %>°</h2>
+      <h3><%= weatherDescription %></h3>
+      <h6>Min Temperature Today: <%= minCurrentTemp %>°, Max Temperature Today: <%= maxCurrentTemp %>°</h6>
+    </div>
 
     <div class="dropdown">
       <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -40,26 +46,31 @@
 
     <hr>
 
+    <h3 class="forecast-h3">Forecast:</h3>
+
     <div class="container text-center">
       <div class="row">
         <% for (let i = 0; i < 4; i++){ %>
-        <div class="col col-3">
-          <div class="card" style="width: 17rem;">
-            <img src="<%= "https://openweathermap.org/img/wn/" + weatherForecast[i].weather[0].icon + "@2x.png"%>" class="card-img-top" alt="...">
+        <div class="col col-3 forecast-container">
+          <div class="card" style="width: 19rem;">
+            <img class="icon" src="<%= "https://openweathermap.org/img/wn/" + weatherForecast[i].weather[0].icon + "@2x.png"%>" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title"><%= (weatherForecast[i].dt_txt).substring(5,10) %></h5>
+
               <table class="table">
                 <tbody>
                   <tr>
-                    <td>
-                      <p><%= weatherForecast[i].weather[0].main %></p>
+                    <td class="td">
+                      <h5 class="card-title desc-for-container"><%= (weatherForecast[i].dt_txt).substring(5,10) %></h5>
+                    </td>
+                    <td class="td">
+                      <p class="desc-for-container"><%= weatherForecast[i].weather[0].main %></p>
                     </td>
                   </tr>
                   <tr>
-                    <td>
+                    <td class="main-temp">
                       <p>Temperature:</p>
                     </td>
-                    <td>
+                    <td class="main-temp">
                       <%= Math.round(weatherForecast[i].main.temp) %>°
                     </td>
                   </tr>
@@ -113,23 +124,25 @@
 
       <div class="row">
         <% for (let i = 4; i < 5; i++){ %>
-        <div class="col col-3">
-          <div class="card" style="width: 17rem;">
-            <img src="<%= "https://openweathermap.org/img/wn/" + weatherForecast[i].weather[0].icon + "@2x.png"%>" class="card-img-top" alt="...">
+        <div class="col col-3 forecast-container">
+          <div class="card" style="width: 19rem;">
+            <img class="icon" src="<%= "https://openweathermap.org/img/wn/" + weatherForecast[i].weather[0].icon + "@2x.png"%>" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title"><%= (weatherForecast[i].dt_txt).substring(5,10) %></h5>
               <table class="table">
                 <tbody>
                   <tr>
-                    <td>
-                      <p><%= weatherForecast[i].weather[0].main %></p>
+                    <td class="td">
+                      <h5 class="card-title desc-for-container"><%= (weatherForecast[i].dt_txt).substring(5,10) %></h5>
+                    </td>
+                    <td class="td">
+                      <p class="desc-for-container"><%= weatherForecast[i].weather[0].main %></p>
                     </td>
                   </tr>
                   <tr>
-                    <td>
+                    <td class="main-temp">
                       <p>Temperature:</p>
                     </td>
-                    <td>
+                    <td class="main-temp">
                       <%= Math.round(weatherForecast[i].main.temp) %>°
                     </td>
                   </tr>
@@ -184,59 +197,10 @@
     </div>
 
 
-    <!-- <% weatherForecast.forEach(function(element){ %>
-    <div class="alert alert-secondary" role="alert">
-      <h4><%= element.dt_txt %></h2>
-
-
-        <table class="table">
-          <tbody>
-            <tr>
-              <td>
-                <h5><%= element.weather[0].main %></h5>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <h5>Temperature:</h5>
-              </td>
-              <td>
-                <%= Math.round(element.main.temp) %>°
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <h5>Feels like:</h5>
-              </td>
-              <td>
-                <%= Math.round(element.main.feels_like) %>°
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <h5>Atmospheric pressure:</h5>
-              </td>
-              <td>
-                <%= element.main.pressure %>hPa
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <h5>Humidity:</h5>
-              </td>
-              <td>
-                <%= element.main.humidity %>%
-              </td>
-            </tr>
-          </tbody>
-        </table>
-
-    </div>
-
-    <% }) %> -->
+    <hr>
 
     <!-- Paypal Donate button -->
-    <form action="https://www.paypal.com/donate" method="post" target="_top">
+    <form class="support-b" action="https://www.paypal.com/donate" method="post" target="_top">
       <input type="hidden" name="business" value="ZEDMVZC3862AN" />
       <input type="hidden" name="no_recurring" value="0" />
       <input type="hidden" name="item_name" value="Thank you for supporting Weather Website without Ads Project!" />
@@ -244,7 +208,7 @@
       <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
       <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
     </form>
-    <hr>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
 
